--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <label for="valor-b">Valor B:</label>
                 <input type="number" id="valor-b" required placeholder="Digite o valor B">
                 <p class="error-message">O valor B precisa ser maior que o valor A!</p>
+                <p class="success-message">O Valor B é maior que Valor A!</p>
                 <button type="submit">Validar</button>
             </form>
-            <p class="success-message"></p>
         </div>
     </div>
 
